# Code_Challenge

code-challenge-template/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
code-challenge-template/answers/: extra_credit_aws.md  problem1_data_model.md  problem2_ingestion.md  problem3_analysis.md  problem4_rest_api.md
code-challenge-template/src/app/: analysis.py  api.py  db.py  ingest.py  models.py  schemas.py  utils.py
code-challenge-template/src/app/tests/: test_analysis.py  test_api.py  test_ingest.py
mlp_project/: mlp.ipynb  mlp_comparison.py
mlp_project/notebooks/: utils.py
