[project]
name = "weather-api"
version = "1.0.0"
description = "Corteva weather data ingestion and FastAPI service"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

